# CVHacking

Project_3/proj3-1-1/: CMakeLists.txt  proj3-1-1.cpp
Project_3/proj3-1-2/: CMakeLists.txt  calculateM.cpp  calculateM.h  proj3-1-2.cpp  pts2d-norm-pic_a.txt  pts3d-norm.txt  readme.txt
Project_3/proj3-1-3/: CMakeLists.txt  calculateM.cpp  calculateM.h  normalizePoints.cpp  normalizePoints.h  proj3-1-3.cpp  readme.txt  utils.cpp  utils.h
Project_3/proj3-1-4/: CMakeLists.txt  proj3-1-4.cpp  readme.txt
Project_3/proj3-2-1/: CMakeLists.txt  normalizePoints.h  proj3-2-1.cpp  readme.txt
Project_3/proj3-2-2/: CMakeLists.txt  calculateFh.cpp  proj3-2-2.cpp  readme.txt
Project_3/proj3-2-3/: CMakeLists.txt  proj3-2-3.cpp  readme.txt
Project_3/proj3-2-4/: CMakeLists.txt  calculateFh.cpp  calculateFh.h  normalizePoints.cpp  proj3-2-4.cpp  readme.txt
Project_4/proj4-1-1/: CMakeLists.txt  Gradient.cpp  Gradient.h  proj4-1-1.cpp
Project_4/proj4-1-2/: CMakeLists.txt  Gradient.cpp  Gradient.h  proj4-1-2.cpp  toRun.txt
Project_4/proj4-1-3/: CMakeLists.txt  Gradient.h  README.txt  myReadme.txt  myShi.cpp  notes.txt  proj4-1-3.cpp  readme.txt
Project_4/proj4-2-1/: CMakeLists.txt  Gradient.cpp  Gradient.h  Matching.cpp  Matching.h  myReadme.txt  proj4-2-1.cpp
Project_4/proj4-2-2/: CMakeLists.txt  Gradient.cpp  Matching.cpp  Matching.h  notes.txt  proj4-2-2.cpp
Project_4/proj4-3-1/: CMakeLists.txt  Matching.cpp  README.txt  Ransac.cpp  Ransac.h  notes.txt  proj4-3-1.cpp
Project_4/proj4-3-2/: CMakeLists.txt  Matching.cpp  Matching.h  README.txt  Ransac.cpp  Ransac.h  proj4-3-2.cpp
Project_5/proj5-1-1/: CMakeLists.txt  Pyramid.cpp  Pyramid.h  proj5-1-1.cpp
Project_5/proj5-1-2/: CMakeLists.txt  Pyramid.cpp  Pyramid.h  proj5-1-2.cpp
Project_5/proj5-2-1/: CMakeLists.txt  LK.cpp  LK.h  proj5-2-1.cpp
Project_5/proj5-2-2/: CMakeLists.txt  LK.cpp  LK.h  README.txt  proj5-2-2.cpp
Project_5/proj5-3-1/: CMakeLists.txt  LK.cpp  LK.h  Pyramid.cpp  Pyramid.h  generate.cpp  proj5-3-1.cpp
Project_6/data/: testA.txt  testB.txt  trainA.txt  trainB.txt
Project_6/proj6-1-1/: octave-core  proj6_1_1.m
Project_6/proj6-2-1/: octave-core  proj6_2_1.m  stumps.m
Project_6/proj6-3-1/: README.txt  proj6_3_1.m  proj6_3_1_alternative.m
Project_6/proj6-3-2/: README.txt  proj6_3_2.m
